tests/codegen/fail/interface/trait/missing_impl_attr.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/trait/missing_impl_attr.rs:8:1
  |
8 | #[graphql_interface(for = ObjA)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: missing interface reference in implementer's `impl` attribute.', $DIR/fail/interface/trait/missing_impl_attr.rs:8:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the attribute macro `graphql_interface` (in Nightly builds, run with -Z macro-backtrace for more info)
